minor corrections; unit test for bfgs algorithm complete

--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,8 @@ AC_ARG_WITH([blas_lib],
                             [blas lib directory])],
             [LDFLAGS="-L$withval $LDFLAGS"])
 
+AC_DEFINE(_DEBUG_,0)
+
 # Remove the default CXXFLAGS.
 : ${CXXFLAGS=""}
 
