--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,9 @@
 bin_PROGRAMS = \
 bfgs_test \
+linear_algebra_test \
 single_layer_perceptron_test
 
 ##  bfgs test
-
 bfgs_test_SOURCES = \
 test/bfgs_test.cpp \
 utilities/optimization/bfgs.cpp \
@@ -13,8 +13,15 @@ utilities/linear_algebra/dense_matrix.cpp
 
 bfgs_test_LINK = $(FC) $(LDFLAGS) -o bfgs_test
 
-##  single_layer_perceptron_test
+##  linear algebra test
+linear_algebra_test_SOURCES = \
+test/linear_algebra_test.cpp \
+utilities/linear_algebra/dense_vector.cpp \
+utilities/linear_algebra/dense_matrix.cpp
 
+linear_algebra_test_LINK = $(FC) $(LDFLAGS) -o linear_algebra_test
+
+##  single_layer_perceptron_test
 single_layer_perceptron_test_SOURCES = \
 test/single_layer_perceptron_test.cpp \
 neural_network/single_layer_perceptron.cpp \
