--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -78,7 +78,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 bin_PROGRAMS = line_search_test$(EXEEXT) bfgs_test$(EXEEXT) \
 	linear_algebra_test$(EXEEXT) \
-	single_layer_perceptron_test$(EXEEXT)
+	single_layer_perceptron_test$(EXEEXT) \
+	site_labels_test$(EXEEXT) fit_hamiltonian_terms$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/config/depcomp
@@ -100,6 +101,18 @@ am_bfgs_test_OBJECTS = test/bfgs_test.$(OBJEXT) \
 	utilities/linear_algebra/dense_matrix.$(OBJEXT)
 bfgs_test_OBJECTS = $(am_bfgs_test_OBJECTS)
 bfgs_test_LDADD = $(LDADD)
+am_fit_hamiltonian_terms_OBJECTS =  \
+	hamiltonians/fit_hamiltonian_terms.$(OBJEXT) \
+	features/site_labels.$(OBJEXT) \
+	neural_network/single_layer_perceptron.$(OBJEXT) \
+	neural_network/loss_function_data.$(OBJEXT) \
+	neural_network/network_functions.$(OBJEXT) \
+	utilities/optimization/lbfgs.$(OBJEXT) \
+	utilities/optimization/line_search.$(OBJEXT) \
+	utilities/linear_algebra/dense_vector.$(OBJEXT) \
+	utilities/linear_algebra/dense_matrix.$(OBJEXT)
+fit_hamiltonian_terms_OBJECTS = $(am_fit_hamiltonian_terms_OBJECTS)
+fit_hamiltonian_terms_LDADD = $(LDADD)
 am_line_search_test_OBJECTS = test/line_search_test.$(OBJEXT) \
 	utilities/optimization/line_search.$(OBJEXT) \
 	utilities/linear_algebra/dense_vector.$(OBJEXT) \
@@ -124,6 +137,12 @@ am_single_layer_perceptron_test_OBJECTS =  \
 single_layer_perceptron_test_OBJECTS =  \
 	$(am_single_layer_perceptron_test_OBJECTS)
 single_layer_perceptron_test_LDADD = $(LDADD)
+am_site_labels_test_OBJECTS = test/site_labels_test.$(OBJEXT) \
+	features/site_labels.$(OBJEXT) \
+	utilities/linear_algebra/dense_vector.$(OBJEXT) \
+	utilities/linear_algebra/dense_matrix.$(OBJEXT)
+site_labels_test_OBJECTS = $(am_site_labels_test_OBJECTS)
+site_labels_test_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -153,12 +172,14 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(bfgs_test_SOURCES) $(line_search_test_SOURCES) \
-	$(linear_algebra_test_SOURCES) \
-	$(single_layer_perceptron_test_SOURCES)
-DIST_SOURCES = $(bfgs_test_SOURCES) $(line_search_test_SOURCES) \
-	$(linear_algebra_test_SOURCES) \
-	$(single_layer_perceptron_test_SOURCES)
+SOURCES = $(bfgs_test_SOURCES) $(fit_hamiltonian_terms_SOURCES) \
+	$(line_search_test_SOURCES) $(linear_algebra_test_SOURCES) \
+	$(single_layer_perceptron_test_SOURCES) \
+	$(site_labels_test_SOURCES)
+DIST_SOURCES = $(bfgs_test_SOURCES) $(fit_hamiltonian_terms_SOURCES) \
+	$(line_search_test_SOURCES) $(linear_algebra_test_SOURCES) \
+	$(single_layer_perceptron_test_SOURCES) \
+	$(site_labels_test_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -308,6 +329,24 @@ utilities/linear_algebra/dense_vector.cpp \
 utilities/linear_algebra/dense_matrix.cpp
 
 single_layer_perceptron_test_LINK = $(FC) $(LDFLAGS) -o single_layer_perceptron_test
+site_labels_test_SOURCES = \
+test/site_labels_test.cpp \
+features/site_labels.cpp \
+utilities/linear_algebra/dense_vector.cpp \
+utilities/linear_algebra/dense_matrix.cpp 
+
+fit_hamiltonian_terms_LINK = $(FC) $(LDFLAGS) -o fit_hamiltonian_terms
+fit_hamiltonian_terms_SOURCES = \
+hamiltonians/fit_hamiltonian_terms.cpp \
+features/site_labels.cpp \
+neural_network/single_layer_perceptron.cpp \
+neural_network/loss_function_data.cpp \
+neural_network/network_functions.cpp \
+utilities/optimization/lbfgs.cpp \
+utilities/optimization/line_search.cpp \
+utilities/linear_algebra/dense_vector.cpp \
+utilities/linear_algebra/dense_matrix.cpp 
+
 all: all-am
 
 .SUFFIXES:
@@ -423,20 +462,23 @@ utilities/linear_algebra/dense_matrix.$(OBJEXT):  \
 bfgs_test$(EXEEXT): $(bfgs_test_OBJECTS) $(bfgs_test_DEPENDENCIES) $(EXTRA_bfgs_test_DEPENDENCIES) 
 	@rm -f bfgs_test$(EXEEXT)
 	$(AM_V_GEN)$(bfgs_test_LINK) $(bfgs_test_OBJECTS) $(bfgs_test_LDADD) $(LIBS)
-test/line_search_test.$(OBJEXT): test/$(am__dirstamp) \
-	test/$(DEPDIR)/$(am__dirstamp)
-
-line_search_test$(EXEEXT): $(line_search_test_OBJECTS) $(line_search_test_DEPENDENCIES) $(EXTRA_line_search_test_DEPENDENCIES) 
-	@rm -f line_search_test$(EXEEXT)
-	$(AM_V_GEN)$(line_search_test_LINK) $(line_search_test_OBJECTS) $(line_search_test_LDADD) $(LIBS)
-test/linear_algebra_test.$(OBJEXT): test/$(am__dirstamp) \
-	test/$(DEPDIR)/$(am__dirstamp)
-
-linear_algebra_test$(EXEEXT): $(linear_algebra_test_OBJECTS) $(linear_algebra_test_DEPENDENCIES) $(EXTRA_linear_algebra_test_DEPENDENCIES) 
-	@rm -f linear_algebra_test$(EXEEXT)
-	$(AM_V_GEN)$(linear_algebra_test_LINK) $(linear_algebra_test_OBJECTS) $(linear_algebra_test_LDADD) $(LIBS)
-test/single_layer_perceptron_test.$(OBJEXT): test/$(am__dirstamp) \
-	test/$(DEPDIR)/$(am__dirstamp)
+hamiltonians/$(am__dirstamp):
+	@$(MKDIR_P) hamiltonians
+	@: > hamiltonians/$(am__dirstamp)
+hamiltonians/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) hamiltonians/$(DEPDIR)
+	@: > hamiltonians/$(DEPDIR)/$(am__dirstamp)
+hamiltonians/fit_hamiltonian_terms.$(OBJEXT):  \
+	hamiltonians/$(am__dirstamp) \
+	hamiltonians/$(DEPDIR)/$(am__dirstamp)
+features/$(am__dirstamp):
+	@$(MKDIR_P) features
+	@: > features/$(am__dirstamp)
+features/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) features/$(DEPDIR)
+	@: > features/$(DEPDIR)/$(am__dirstamp)
+features/site_labels.$(OBJEXT): features/$(am__dirstamp) \
+	features/$(DEPDIR)/$(am__dirstamp)
 neural_network/$(am__dirstamp):
 	@$(MKDIR_P) neural_network
 	@: > neural_network/$(am__dirstamp)
@@ -453,12 +495,38 @@ neural_network/network_functions.$(OBJEXT):  \
 	neural_network/$(am__dirstamp) \
 	neural_network/$(DEPDIR)/$(am__dirstamp)
 
+fit_hamiltonian_terms$(EXEEXT): $(fit_hamiltonian_terms_OBJECTS) $(fit_hamiltonian_terms_DEPENDENCIES) $(EXTRA_fit_hamiltonian_terms_DEPENDENCIES) 
+	@rm -f fit_hamiltonian_terms$(EXEEXT)
+	$(AM_V_GEN)$(fit_hamiltonian_terms_LINK) $(fit_hamiltonian_terms_OBJECTS) $(fit_hamiltonian_terms_LDADD) $(LIBS)
+test/line_search_test.$(OBJEXT): test/$(am__dirstamp) \
+	test/$(DEPDIR)/$(am__dirstamp)
+
+line_search_test$(EXEEXT): $(line_search_test_OBJECTS) $(line_search_test_DEPENDENCIES) $(EXTRA_line_search_test_DEPENDENCIES) 
+	@rm -f line_search_test$(EXEEXT)
+	$(AM_V_GEN)$(line_search_test_LINK) $(line_search_test_OBJECTS) $(line_search_test_LDADD) $(LIBS)
+test/linear_algebra_test.$(OBJEXT): test/$(am__dirstamp) \
+	test/$(DEPDIR)/$(am__dirstamp)
+
+linear_algebra_test$(EXEEXT): $(linear_algebra_test_OBJECTS) $(linear_algebra_test_DEPENDENCIES) $(EXTRA_linear_algebra_test_DEPENDENCIES) 
+	@rm -f linear_algebra_test$(EXEEXT)
+	$(AM_V_GEN)$(linear_algebra_test_LINK) $(linear_algebra_test_OBJECTS) $(linear_algebra_test_LDADD) $(LIBS)
+test/single_layer_perceptron_test.$(OBJEXT): test/$(am__dirstamp) \
+	test/$(DEPDIR)/$(am__dirstamp)
+
 single_layer_perceptron_test$(EXEEXT): $(single_layer_perceptron_test_OBJECTS) $(single_layer_perceptron_test_DEPENDENCIES) $(EXTRA_single_layer_perceptron_test_DEPENDENCIES) 
 	@rm -f single_layer_perceptron_test$(EXEEXT)
 	$(AM_V_GEN)$(single_layer_perceptron_test_LINK) $(single_layer_perceptron_test_OBJECTS) $(single_layer_perceptron_test_LDADD) $(LIBS)
+test/site_labels_test.$(OBJEXT): test/$(am__dirstamp) \
+	test/$(DEPDIR)/$(am__dirstamp)
+
+site_labels_test$(EXEEXT): $(site_labels_test_OBJECTS) $(site_labels_test_DEPENDENCIES) $(EXTRA_site_labels_test_DEPENDENCIES) 
+	@rm -f site_labels_test$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(site_labels_test_OBJECTS) $(site_labels_test_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
+	-rm -f features/*.$(OBJEXT)
+	-rm -f hamiltonians/*.$(OBJEXT)
 	-rm -f neural_network/*.$(OBJEXT)
 	-rm -f test/*.$(OBJEXT)
 	-rm -f utilities/linear_algebra/*.$(OBJEXT)
@@ -467,6 +535,8 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@features/$(DEPDIR)/site_labels.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@hamiltonians/$(DEPDIR)/fit_hamiltonian_terms.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@neural_network/$(DEPDIR)/loss_function_data.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@neural_network/$(DEPDIR)/network_functions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@neural_network/$(DEPDIR)/single_layer_perceptron.Po@am__quote@
@@ -474,6 +544,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@test/$(DEPDIR)/line_search_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@test/$(DEPDIR)/linear_algebra_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@test/$(DEPDIR)/single_layer_perceptron_test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@test/$(DEPDIR)/site_labels_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@utilities/linear_algebra/$(DEPDIR)/dense_matrix.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@utilities/linear_algebra/$(DEPDIR)/dense_vector.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@utilities/optimization/$(DEPDIR)/bfgs.Po@am__quote@
@@ -611,6 +682,10 @@ clean-generic:
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
 	-test . = "$(srcdir)" || test -z "$(CONFIG_CLEAN_VPATH_FILES)" || rm -f $(CONFIG_CLEAN_VPATH_FILES)
+	-rm -f features/$(DEPDIR)/$(am__dirstamp)
+	-rm -f features/$(am__dirstamp)
+	-rm -f hamiltonians/$(DEPDIR)/$(am__dirstamp)
+	-rm -f hamiltonians/$(am__dirstamp)
 	-rm -f neural_network/$(DEPDIR)/$(am__dirstamp)
 	-rm -f neural_network/$(am__dirstamp)
 	-rm -f test/$(DEPDIR)/$(am__dirstamp)
@@ -628,7 +703,7 @@ clean: clean-am
 clean-am: clean-binPROGRAMS clean-generic mostlyclean-am
 
 distclean: distclean-am
-	-rm -rf neural_network/$(DEPDIR) test/$(DEPDIR) utilities/linear_algebra/$(DEPDIR) utilities/optimization/$(DEPDIR)
+	-rm -rf features/$(DEPDIR) hamiltonians/$(DEPDIR) neural_network/$(DEPDIR) test/$(DEPDIR) utilities/linear_algebra/$(DEPDIR) utilities/optimization/$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -674,7 +749,7 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-	-rm -rf neural_network/$(DEPDIR) test/$(DEPDIR) utilities/linear_algebra/$(DEPDIR) utilities/optimization/$(DEPDIR)
+	-rm -rf features/$(DEPDIR) hamiltonians/$(DEPDIR) neural_network/$(DEPDIR) test/$(DEPDIR) utilities/linear_algebra/$(DEPDIR) utilities/optimization/$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
